# Mini-Pytorch3D

./: .gitignore  CMakeLists.txt  README.md
cuda/: backward.cu  binning.cu  diffrast.cu
include/mini_pytorch3d/: constants.h  input_parser.h  io.h  legacy.h  math_utils.h  render.h  test_env.h  types.h
report/: slide.md
scripts/: build_and_run.sh  download_resources.sh  normalize_meshes.py  pytorch3d_impl.py
src/: CMakeLists.txt  input_parser.cpp  io.cpp  legacy.cpp  main.cpp  math_utils.cpp  render.cpp  test_env.cpp
